- Fixed bug #34052 (date('U') returns %ld not unix timestamp).